change game template and index, from 10 to 7

--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -7,7 +7,7 @@
         <tr>
             <td colspan="2">
                 <h1>Let's Play Hangman</h1>
-                <h3>You have 10 tries to guess a word<br /></h3>
+                <h3>You have 7 tries to guess a word<br /></h3>
             </td>
         </tr>
         <tr>
@@ -18,7 +18,7 @@
                     <h3>Game stats</h3>
                     <p>Bad tries</p>
                     <p style="font-size: 30px;">{{game_tries}}</p>
-                    <p style="border-top: 1px solid #000; padding-top: 10px;">Left guesses</p>
+                    <p style="border-top: 1px solid #000; padding-top: 10px;">Left bad guesses</p>
                     <p style="font-size: 45px;">{{7 - game_tries}}</p>
                 </div>
             </td>
